--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,30 @@
 spring.mvc.view.suffix: .html
 
 welcome.message: Hello Event manager user
+
+
+#spring.main.banner-mode=off
+
+# create and drop tables and sequences, loads import.sql
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Database settings
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.url=jdbc:mysql://eventmanager.cwcoqamtnh0g.us-east-1.rds.amazonaws.com/eventmanager?useSSL=false
+
+spring.datasource.username=root
+spring.datasource.password=Hrhk1234
+#spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# HikariCP settings
+# spring.datasource.hikari.*
+
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=error
